@@ -743,6 +743,7 @@ Julia Lawall
 Chris Lawrence
 Brian Leair
 Mathieu Leduc-Hamel
+Antony Lee
 Christopher Lee
 Inyeol Lee
 James Lee
